--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
 name = "autosar-data-abstraction"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Daniel Thaler <daniel@dthaler.de>"]
 edition = "2021"
-description = "abstraction layer for the autosar-data model"
+description = "abstraction layer for the autosar data model"
 license = "MIT OR Apache-2.0"
 keywords = ["arxml", "automotive", "file-format", "Autosar"]
 # categories = ["parser-implementations"]
-repository = "https://github.com/DanielT/autosar-data"
+repository = "https://github.com/DanielT/autosar-data-abstraction"
 
 [dependencies]
 autosar-data = "0.17"
-# autosar-data-specification = "0.17"
 thiserror = "~2.0"
 
 [dev-dependencies]
