--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autosar-data-abstraction"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Daniel Thaler <daniel@dthaler.de>"]
 edition = "2024"
 description = "abstraction layer for the autosar data model"
@@ -10,8 +10,8 @@ keywords = ["arxml", "automotive", "file-format", "Autosar"]
 repository = "https://github.com/DanielT/autosar-data-abstraction"
 
 [dependencies]
-autosar-data = "0.18"
-thiserror = "~2.0"
+autosar-data = "0.19"
+thiserror = "2.0"
 
 [dev-dependencies]
 tempfile = "3.8"
