--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autosar-data-abstraction"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Daniel Thaler <daniel@dthaler.de>"]
 edition = "2024"
 description = "abstraction layer for the autosar data model"
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 keywords = ["arxml", "automotive", "file-format", "Autosar"]
 # categories = ["parser-implementations"]
 repository = "https://github.com/DanielT/autosar-data-abstraction"
+rust-version = "1.85.1"
 
 [dependencies]
 autosar-data = "0.20"
